# interp

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
src/: main.rs
src/lib/: global.rs  instruction.rs  lib.rs  map.rs  module.rs  object.rs  prelude.rs  ptr.rs  source.rs  stack.rs  static_assert.rs  type_info.rs  typeinfo.rs  unchecked_destructure.rs  unsafe_vec.rs  untyped_heap.rs  untyped_map.rs  untyped_stack.rs  untyped_vec.rs  utils.rs  valloc.rs  value.rs  vm.rs  wip.rs
src/lib/core/: cstr.rs  dynbuf.rs  dynmap.rs  dynstr.rs  fnv1a.rs  maybe.rs  mod.rs  num.rs  outcome.rs  pat.rs  ptr.rs
src/lib/frontend/: analyzer.rs  ast.rs  common.rs  lexer.rs  mod.rs  parser.rs  token.rs  ty.rs
src/lib/macros/: Cargo.toml  macros.rs
src/lib/vm/: context.rs  global.rs  instruction.rs  mod.rs  module.rs  object.rs  stack.rs  typeinfo.rs  value.rs
test_scripts/: basic_pegs.z  fib_memo.z  fold.z  min.z  self_ref.z  type_fail.z
