[package]
name = "interp"
version = "0.1.0"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"

[lib]
name = "interp"
path = "src/lib/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "interp"
path = "src/main.rs"


[features]
"default" = ["nantag"]
"nantag" = []
"nantag_clear_unusable_data_bits" = ["nantag"]


[dependencies]
"interp_macros" = { path="./src/lib/macros" }