[package]
name = "zeta"
version = "0.1.0"
authors = ["noxabellus <noxabellus@gmail.com>"]
edition = "2018"

[lib]
name = "zeta"
path = "src/lib/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "zeta"
path = "src/main.rs"


[features]
"default" = ["nantag"]
"nantag" = []
"nantag_clear_unusable_data_bits" = ["nantag"]


[dependencies]
"zeta_macros" = { path="./src/lib/macros" }